--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "babel-register": "^6.22.0",
     "eslint": "^3.14.0",
     "eslint-plugin-flowtype": "^2.30.0",
-    "flow-bin": "^0.38.0"
+    "flow-bin": "^0.38.0",
+    "sanctuary-type-classes": "^3.0.1"
   },
   "ava": {
     "babel": "inherit",
